# summer-rs

./: .cnb.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  README.zh.md  contrib-plugins
.github/workflows/: clippy.yaml  docs.yaml  publish.yaml  test-coverage.yaml
.ide/: Dockerfile
docs/content/: _index.md  _index.zh.md
docs/content/blog/: benchmark.md  benchmark.zh.md  spring-rs-initial-version.md  spring-rs-initial-version.zh.md  spring-stream-release.md  spring-stream-release.zh.md
docs/content/docs/: _index.md  _index.zh.md
docs/static/: site.webmanifest
docs/templates/: index.html
docs/templates/blog/: page.html
docs/templates/docs/: page.html
docs/templates/macros/: header.html
examples/apalis-redis-example/: Cargo.toml
examples/circular-dependency-injection-example/: Cargo.toml
examples/component-macro-example/: Cargo.toml
examples/dependency-inject-example/: Cargo.toml
examples/grpc-example/: Cargo.toml
examples/grpc/grpc-nacos-example/: Cargo.toml  README.md  compose.yaml
examples/grpc/grpc-nacos-example/config/: app.toml  client.toml
examples/grpc/grpc-nacos-example/src/: discovery.rs
examples/hello-world-example/: Cargo.toml
examples/integrations/nacos-example/: Cargo.toml  README.md
examples/integrations/nacos-example/config/: app.toml
examples/integrations/nacos-example/src/: main.rs
examples/job-example/: Cargo.toml
examples/job/xxl-job-example/: Cargo.toml  compose.yaml
examples/job/xxl-job-example/config/: app.toml
examples/job/xxl-job-example/src/: main.rs
examples/mail-example/: Cargo.toml
examples/multi-datasource-example/: Cargo.toml
examples/nested-dependency-injection-example/: Cargo.toml
examples/openapi-example/: Cargo.toml
examples/openapi-example/src/: garde_example.rs  main.rs  validation.rs
examples/opendal-example/: Cargo.toml
examples/opentelemetry-example/: Cargo.toml
examples/plugin-example/: Cargo.toml  build.rs
examples/postgres-example/: Cargo.toml
examples/redis-example/: Cargo.toml
examples/sa-token-example/: Cargo.toml
examples/sa-token-example/config/: app.toml
examples/sa-token-example/src/: config.rs  main.rs  sea_orm_storage.rs
examples/sea-orm-example/: Cargo.toml
examples/socket-io-example/: Cargo.toml
examples/spring-opendal-example/: Cargo.toml
examples/spring-opendal-example/src/: main.rs
examples/stream-file-example/: Cargo.toml
examples/stream-kafka-example/: Cargo.toml
examples/stream-redis-example/: Cargo.toml
examples/web-example/: Cargo.toml
examples/web-middleware-example/: Cargo.toml
examples/web-middleware-example/src/: main.rs
spring/: Cargo.toml
spring-apalis/: Cargo.toml
spring-grpc/: Cargo.toml
spring-job/: Cargo.toml
spring-macros/: Cargo.toml
spring-mail/: Cargo.toml
spring-opendal/: CHANGELOG.md  Cargo.toml
spring-opentelemetry/: Cargo.toml
spring-postgres/: Cargo.toml
spring-redis/: CHANGELOG.md  Cargo.toml
spring-redis/src/: config.rs  lib.rs
spring-redis/tests/: config_test.rs
spring-sa-token/: Cargo.toml
spring-sa-token/src/: storage.rs
spring-sea-orm/: CHANGELOG.md  Cargo.toml
spring-sqlx/: CHANGELOG.md  Cargo.toml
spring-stream/: CHANGELOG.md  Cargo.toml
spring-web/: CHANGELOG.md  Cargo.toml
spring-web/src/: config.rs  lib.rs
spring/src/: lib.rs
summer/: CHANGELOG.md  COMPONENT_MACRO.md  COMPONENT_MACRO.zh.md  Cargo.toml  Config.md  Config.zh.md  DI.md  DI.zh.md  Log-Plugin.md  Log-Plugin.zh.md  Plugin.md  Plugin.zh.md
summer-apalis/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-apalis/src/: lib.rs
summer-grpc/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-grpc/src/: config.rs  lib.rs
summer-job/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-job/src/: extractor.rs  handler.rs  job.rs  lib.rs
summer-job/tests/: job_test.rs
summer-macros/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-macros/src/: auto.rs  cache.rs  config.rs  inject.rs  job.rs  lib.rs  middlewares.rs  problem_details.rs  route.rs  sa_token.rs  socketioxide.rs  stream.rs
summer-mail/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-mail/src/: config.rs  lib.rs
summer-nacos/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-nacos/src/: config.rs  lib.rs
summer-opendal/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-opendal/src/: config.rs  lib.rs
summer-opentelemetry/: CHANGELOG  Cargo.toml  README.md  README.zh.md
summer-opentelemetry/src/: lib.rs
summer-postgres/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-postgres/src/: config.rs  lib.rs
summer-pubsub/src/: consumer.rs  lib.rs  producer.rs
summer-redis/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-redis/src/: config.rs  lib.rs
summer-redis/tests/: config_test.rs
summer-sa-token/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-sa-token/src/: config.rs  configurator.rs  custom_storage.rs  lib.rs  prelude.rs  storage.rs
summer-sa-token/tests/: config_test.rs  integration_test.rs
summer-sea-orm/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-sea-orm/src/: config.rs  lib.rs  pagination.rs
summer-sqlx/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-sqlx/src/: config.rs  lib.rs
summer-sqlx/tests/: config_test.rs
summer-stream/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-stream/src/: consumer.rs  extractor.rs  handler.rs  lib.rs
summer-test/: Cargo.toml  README.md  README.zh.md
summer-test/src/: lib.rs  web.rs
summer-test/tests/: web_e2e.rs
summer-web/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-web/src/: config.rs  error.rs  extractor.rs  handler.rs  lib.rs  middleware.rs  openapi.rs  problem_details.rs
summer-web/tests/: integration_test.rs  validation_validator_args_test.rs
summer-xxl-job/: CHANGELOG.md  Cargo.toml  README.md  README.zh.md
summer-xxl-job/src/: config.rs  lib.rs
summer/src/: app.rs  banner.rs  error.rs  event.rs  lib.rs
summer/tests/: component_macro_test.rs  integration_test.rs
(+82 files in other folders)
