[package]
name = "sa-token-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
summer = { path = "../../summer" }
summer-web = { path = "../../summer-web" }
summer-sa-token = { path = "../../summer-sa-token" }
summer-sea-orm = { path = "../../summer-sea-orm", features = ["postgres"] }
sea-orm = { workspace = true, features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls"] }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }