[package]
name = "summer-opendal-example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
summer = { path = "../../summer" }
summer-web = { path = "../../summer-web" }
summer-opendal = { path = "../../summer-opendal", features = ["services-fs"] }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
